manifest/live/service-v6.yaml
apiVersion: v1
kind: Service
metadata:
  name: rtmp-service-v6
  labels:
    app: rtmp-live-server
    io.cilium/lb-pool: ula
  namespace: live
  annotations:
    external-dns.alpha.kubernetes.io/hostname: live.svc.ddlia.com
    external-dns.alpha.kubernetes.io/provider: "pihole"
spec:
  ipFamilyPolicy: SingleStack
  ipFamilies:
  - IPv6
  selector:
    app: rtmp-live-server
  type: LoadBalancer
  ports:
    - name: rtmp
      protocol: TCP
      port: 1935
      targetPort: 1935
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: live-dashboard-v6
  labels:
    app.kubernetes.io/name: live-dashboard
    io.cilium/lb-pool: ula
  namespace: live
  annotations:
    external-dns.alpha.kubernetes.io/hostname: dash.live.svc.ddlia.com
    external-dns.alpha.kubernetes.io/provider: "pihole"
spec:
  ipFamilyPolicy: SingleStack
  ipFamilies:
  - IPv6
  selector:
    app.kubernetes.io/name: live-dashboard
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
