manifest/live/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rtmp-service
  labels:
    app: rtmp-live-server
    announce: bgp-v4
  namespace: live
  annotations:
    external-dns.alpha.kubernetes.io/hostname: live.svc.ddlia.com
    external-dns.alpha.kubernetes.io/provider: "pihole"
spec:
  selector:
    app: rtmp-live-server
  type: LoadBalancer
  ports:
    - name: rtmp
      protocol: TCP
      port: 1935
      targetPort: 1935
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: live-dashboard
  namespace: live
  labels:
    app.kubernetes.io/name: live-dashboard
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: live-dashboard
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
